[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-kimstestplugin"
version = "0.0.1"
description = "Plugin to check Kim knows how to make a plugin."
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
  { name = "Kim Dundas", email = "kim@opensceincetools.org" },
  { name = "Inca Dundas", email = "inca_wants_treats@gmail.com" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls.homepage = "https://github.com/kimDundas/psychopy-kimstestplugin"

dependencies = [
  "faster-whisper",
  "librosa",
  "typing-extensions",
]

[tool.setuptools.packages.find]
where = ["",]

[project.entry-points."psychopy.sound.transcribe"]
WhisperTranscriber = "psychopy_whisper:WhisperTranscriber"